deploy: ab8a64202f28a43331e4df3afcfab49ffd9260a0

--- a/linea-ignition-campaign/campaign-information.html
+++ b/linea-ignition-campaign/campaign-information.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-f314dfef.js";
+            window.path_to_searchindex_js = "../searchindex-f6ac5342.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6190d6e6.js"></script>
+        <script src="../toc-f4d3ab2d.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -190,9 +190,10 @@
 <h2 id="apr"><a class="header" href="#apr">APR</a></h2>
 <p>The APR shown on the UI is an estimate value based on last week’s rewards and the current TVL, which is estimated as:</p>
 <p><img src="https://lh7-rt.googleusercontent.com/docsz/AD_4nXfp3-krRpSAm7t-wMFjlz43e7vQTgoagwio49gNj6Xfcuz8LVuXWjg8D-JMSBI-jpNyah8cKrOyGGsKHkfttWS-zZqlQMtyPFQh5pI-1z-F5Zc2dUjC0KlFR1POXrb5UPvFdTEB?key=wKoiQLfeVFkFCSNKXJfBXg" alt=""></p>
-<p>{% hint style=“warning” %}
-For <strong>Etherex pools</strong>, the actual APR of your LP position depends on the swap volume your liquidity absorbs and the corresponding swap slippage.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+For <strong>Etherex pools</strong>, the actual APR of your LP position depends on the swap volume your liquidity absorbs and the corresponding swap slippage.</p>
+</blockquote>
 <h2 id="end-date"><a class="header" href="#end-date">End Date </a></h2>
 <p>Campaign end date: October 26, 2025.</p>
 
