--- a/linea-ignition-campaign/eligibility.html
+++ b/linea-ignition-campaign/eligibility.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-f314dfef.js";
+            window.path_to_searchindex_js = "../searchindex-f6ac5342.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6190d6e6.js"></script>
+        <script src="../toc-f4d3ab2d.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -178,10 +178,11 @@
                         <h1 id="eligibility"><a class="header" href="#eligibility">Eligibility</a></h1>
 <p>Linea Ignition is designed to incentivize liquidity providers (LPs) on Etherex and Lending protocols (Aave and Euler) on Linea. Rewards are allocated in LINEA.</p>
 <h3 id="core-protocols-and-pools"><a class="header" href="#core-protocols-and-pools">Core Protocols and Pools</a></h3>
-<p>{% hint style=“warning” %}
+<blockquote>
+<p><strong>Note:</strong>
 IMPORTANT UPDATE:</p>
-<p><strong>Euler mUSD (Re7 Labs) pool</strong> is eligible for LINEA incentives since September 22, 2025. <a href="rewards-schedule.html#epoch-september-22-2025-september-28-2025">View detailed rewards schedule</a>.
-{% endhint %}</p>
+</blockquote>
+<p><strong>Euler mUSD (Re7 Labs) pool</strong> is eligible for LINEA incentives since September 22, 2025. <a href="rewards-schedule.html#epoch-september-22-2025-september-28-2025">View detailed rewards schedule</a>.</p>
 <p>LPs can earn rewards with the following types of activities:</p>
 <ol>
 <li>Add liquidity in the following pools on <strong>Etherex</strong>:
