--- a/linea-ignition-campaign/rewards-schedule.html
+++ b/linea-ignition-campaign/rewards-schedule.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-f314dfef.js";
+            window.path_to_searchindex_js = "../searchindex-f6ac5342.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6190d6e6.js"></script>
+        <script src="../toc-f4d3ab2d.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -176,9 +176,10 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="rewards-schedule"><a class="header" href="#rewards-schedule">Rewards Schedule</a></h1>
-<p>{% hint style=“warning” %}
-The rewards schedule is up to adjustment by the Linea team on a weekly basis.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+The rewards schedule is up to adjustment by the Linea team on a weekly basis.</p>
+</blockquote>
 <h3 id="epoch-september-1-2025---september-7-2025"><a class="header" href="#epoch-september-1-2025---september-7-2025">Epoch: September 1, 2025 - September 7, 2025</a></h3>
 <p>Total rewards amount in the epoch: 150,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -195,9 +196,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-september-8-2025---september-14-2025"><a class="header" href="#epoch-september-8-2025---september-14-2025">Epoch: September 8, 2025 - September 14, 2025</a></h3>
 <p>Total rewards amount in the epoch: 172,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -215,9 +217,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-september-15-2025---september-21-2025"><a class="header" href="#epoch-september-15-2025---september-21-2025">Epoch: September 15, 2025 - September 21, 2025</a></h3>
 <p>Total rewards amount in the epoch: 140,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -239,9 +242,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-september-22-2025---september-28-2025"><a class="header" href="#epoch-september-22-2025---september-28-2025">Epoch: September 22, 2025 - September 28, 2025</a></h3>
 <p>Total rewards amount in the epoch: 70,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -263,9 +267,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-september-29-2025---october-5-2025"><a class="header" href="#epoch-september-29-2025---october-5-2025">Epoch: September 29, 2025 - October 5, 2025</a></h3>
 <p>Total rewards amount in the epoch: 70,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -287,9 +292,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-october-6-2025---october-12-2025"><a class="header" href="#epoch-october-6-2025---october-12-2025">Epoch: October 6, 2025 - October 12, 2025</a></h3>
 <p>Total rewards amount in the epoch: 70,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -311,9 +317,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-october-13-2025---october-19-2025"><a class="header" href="#epoch-october-13-2025---october-19-2025">Epoch: October 13, 2025 - October 19, 2025</a></h3>
 <p>Total rewards amount in the epoch: 70,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -335,9 +342,10 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-october-20-2025---october-26-2025"><a class="header" href="#epoch-october-20-2025---october-26-2025">Epoch: October 20, 2025 - October 26, 2025</a></h3>
 <p>Total rewards amount in the epoch: 70,000,000 LINEA</p>
 <div class="table-wrapper">
@@ -359,16 +367,19 @@ The rewards schedule is up to adjustment by the Linea team on a weekly basis.
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 <h3 id="epoch-october-27-2025---november-2-2025-extension"><a class="header" href="#epoch-october-27-2025---november-2-2025-extension">Epoch: October 27, 2025 - November 2, 2025 (extension)</a></h3>
-<p>{% hint style=“success” %}
-This is a special <strong>1-week extension</strong> to the original Linea Ignition program.
-{% endhint %}</p>
-<p>{% hint style=“warning” %}
-Rewards accrued during the extended period  still follows a vesting schedule. <a href="claim-rewards-and-vesting.html#vesting-for-extended-session-oct-27-nov-2">View the vesting schedule</a>.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+This is a special <strong>1-week extension</strong> to the original Linea Ignition program.</p>
+</blockquote>
+<blockquote>
+<p><strong>Note:</strong>
+Rewards accrued during the extended period  still follows a vesting schedule. <a href="claim-rewards-and-vesting.html#vesting-for-extended-session-oct-27-nov-2">View the vesting schedule</a>.</p>
+</blockquote>
 <p>Total rewards amount in the epoch: 70,000,000 LINEA</p>
 <div class="table-wrapper">
 <table>
@@ -389,9 +400,10 @@ Rewards accrued during the extended period  still follows a vesting schedule. <a
 </tbody>
 </table>
 </div>
-<p>{% hint style=“info” %}
-*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+*The reward allocation to each lending pool is dynamically computed based on their actual TVL. See the <a href="rewards-calculation.html#lending-pools">rewards calculation rules</a> for details.</p>
+</blockquote>
 
                     </main>
 
