--- a/lp-dashboard-guide/check-incentivized-activities.html
+++ b/lp-dashboard-guide/check-incentivized-activities.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-f314dfef.js";
+            window.path_to_searchindex_js = "../searchindex-f6ac5342.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6190d6e6.js"></script>
+        <script src="../toc-f4d3ab2d.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -178,7 +178,7 @@
                         <h1 id="check-incentivized-activities"><a class="header" href="#check-incentivized-activities">Check Incentivized Activities</a></h1>
 <p>Welcome to the <a href="https://linea-ignition.brevis.network/">Linea Ignition campaign page</a>.</p>
 <p>Here, you can view all incentivized activities, including their name, TVL, last week’s APR, and last week’s rewards. You can participate in an activity by clicking the link next to the name, and review the reward rules by clicking the button on the right.</p>
-<figure><img src="../.gitbook/assets/lp-activity.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/lp-activity.png" alt=""><figcaption></figcaption></p>
 
                     </main>
 
