--- a/lp-dashboard-guide/view-claim-rewards.html
+++ b/lp-dashboard-guide/view-claim-rewards.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-f314dfef.js";
+            window.path_to_searchindex_js = "../searchindex-f6ac5342.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6190d6e6.js"></script>
+        <script src="../toc-f4d3ab2d.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -176,11 +176,12 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="viewclaim-rewards"><a class="header" href="#viewclaim-rewards">View/Claim Rewards</a></h1>
-<p>{% hint style=“warning” %}
-All rewards earned in the Linea Ignition campaign are <strong>vested</strong>. 40% of your rewards can be immediately claimed after October 27, 2025. The remaining 60% rewards are unlocked linearly daily over the next 45 days after October 27, 2025.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+All rewards earned in the Linea Ignition campaign are <strong>vested</strong>. 40% of your rewards can be immediately claimed after October 27, 2025. The remaining 60% rewards are unlocked linearly daily over the next 45 days after October 27, 2025.</p>
+</blockquote>
 <p>Before <strong>October 27, 2025</strong>, the claim function is disabled. You can only view your total accumulative rewards and the detailed rewards for each activity where you have rewards.</p>
-<figure><img src="../.gitbook/assets/claim-lp.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/claim-lp.png" alt=""><figcaption></figcaption></p>
 <p>After October 27, 2025, the “Claim” button becomes active, after which you can view your claimable rewards that have been unlocked and claim them directly by clicking the “Claim” button.</p>
 <p><strong>NOTE:</strong> The reward amount shown here is an estimate and may be adjusted slightly before the end of this incentive program.</p>
 <p><strong>NOTE:</strong> Rewards are updated on a weekly basis.</p>
