deploy: 1189f7b50f0ec4f733e7f12af586835e7bed98fc

--- a/community/community-support.html
+++ b/community/community-support.html
@@ -36,7 +36,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-f6ac5342.js";
+            window.path_to_searchindex_js = "../searchindex-7469ad67.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-f4d3ab2d.js"></script>
@@ -187,7 +187,7 @@
 <li>zkCoprocessor Docs: <a href="https://coprocessor-docs.brevis.network/">https://coprocessor-docs.brevis.network/</a></li>
 <li>Talk to a builder: <a href="https://form.typeform.com/to/lduiliob">https://form.typeform.com/to/lduiliob</a>\</li>
 </ul>
-<p><strong>Dive deeper into Linea</strong></p>
+<p><strong>Dive deeper into Linea</strong>:</p>
 <ul>
 <li>Website: <a href="https://linea.build/">https://linea.build/</a></li>
 <li>X: <a href="https://x.com/LineaBuild">https://x.com/LineaBuild</a></li>
