--- a/lp-dashboard-guide/view-claim-rewards.html
+++ b/lp-dashboard-guide/view-claim-rewards.html
@@ -9,6 +9,23 @@
         <!-- Custom HTML head -->
         <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
         <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
+        
+        <!-- MathJax Configuration -->
+        <script>
+          window.MathJax = {
+            tex: {
+              inlineMath: [['$', '$'], ['\\(', '\\)']],
+              displayMath: [['$$', '$$'], ['\\[', '\\]']],
+              processEscapes: true,
+              processEnvironments: true
+            },
+            options: {
+              ignoreHtmlClass: 'tex2jax_ignore',
+              processHtmlClass: 'tex2jax_process'
+            }
+          };
+        </script>
+        <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
@@ -30,6 +47,8 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../theme/custom-fc75f45e.css">
 
+        <!-- MathJax -->
+        <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
         <!-- Provide site root and default themes to javascript -->
         <script>
