--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,24 @@
         <meta name="robots" content="noindex">
         <!-- Custom HTML head -->
         <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
-        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
+        
+        <!-- MathJax Configuration -->
+        <script>
+          window.MathJax = {
+            tex: {
+              inlineMath: [['$', '$'], ['\\(', '\\)']],
+              displayMath: [['$$', '$$'], ['\\[', '\\]']],
+              processEscapes: true,
+              processEnvironments: true
+            },
+            options: {
+              ignoreHtmlClass: 'tex2jax_ignore',
+              processHtmlClass: 'tex2jax_process'
+            }
+          };
+        </script>
+        <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="css/variables-8adf115d.css">
         <link rel="stylesheet" href="css/general-2459343d.css">
