--- a/linea-ignition-campaign/rewards-calculation.html
+++ b/linea-ignition-campaign/rewards-calculation.html
@@ -55,7 +55,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-7dbc6458.js";
+            window.path_to_searchindex_js = "../searchindex-766240fe.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-f4d3ab2d.js"></script>
@@ -249,7 +249,7 @@ $$</p>
 <li>$S^k_i$ is the <strong>eligible holding</strong> by LP $i$ in pool $k$, calculated as $S_i^k = \max (0, c_i^k - \frac{d_i^k}{l_k})$, where
 <ul>
 <li>$c_i^k$ is the supplied collateral (aToken/eToken) TWA by LP $i$ in pool $k$</li>
-<li>$d_i^k$ is the debt (dToken) TWA by LP $i$ in pool $k$.</li>
+<li>$d_i^k$ is the debt (dToken) TWA by LP $i$ in pool $k$</li>
 <li>$l_k$ is the liquidation threshold for pool $k$ (e.g., 78% for Aave USDC/USDT pool, 83% for Aave ETH pool). For all Euler pools, the liquidation threshold is hardcoded to 92%.</li>
 </ul>
 </li>
